[package]
name = "chains_f2vect"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "chain complexes and dg algebra manipulations"
repository = "https://github.com/Cobord/Homological"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvector = "^0.1.5"
bitvec = "^1.0.1"
num = "^0.4.3"
either = "^1.13.0"
rand = "0.8.5"

[features]
column-major = []